@@ -6,6 +6,9 @@ Not yet released - available from CVS or in the latest snapshot:
 
 Enhancements:
 
+Derby Plugin:
+ New tab to display the source code of Derby stored procedures (Patch ID 2907220)
+
 XML Export:
  Tables in SQuirreL's GUI now allow to export data as XML (besides CSV and MS-Excel export)
  Thanks to mironsadziak for the patch (Patch ID 2905595) 
